[gd_scene load_steps=9 format=3 uid="uid://bvx3xlgxvimps"]

[ext_resource type="Texture2D" uid="uid://b8be4j6vy4fhm" path="res://NewSprites/GUI.png" id="1_a7k0c"]
[ext_resource type="Script" path="res://Scripts/resultadosDeMisionObjetoTemplate.gd" id="2_nrsqd"]
[ext_resource type="Texture2D" uid="uid://cmxyabydxfvaq" path="res://NewSprites/materials.png" id="2_yajfc"]
[ext_resource type="Texture2D" uid="uid://wug53li7gjyh" path="res://NewSprites/equipment.png" id="3_5l18n"]
[ext_resource type="FontFile" uid="uid://bv8fe2b6ni5fa" path="res://Fonts/m3x6.ttf" id="4_u228m"]
[ext_resource type="Texture2D" uid="uid://d2xgkduhlp40y" path="res://NewSprites/GUI_old.png" id="5_mre0a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lm7fw"]
atlas = ExtResource("1_a7k0c")
region = Rect2(1216, 321, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjrdu"]
atlas = ExtResource("5_mre0a")
region = Rect2(981, 344, 20, 9)

[node name="resultadosDeMisionObjetoTemplate" type="TextureRect"]
texture = SubResource("AtlasTexture_lm7fw")
script = ExtResource("2_nrsqd")

[node name="sprite" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -13.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="imageObject" type="Sprite2D" parent="sprite"]
position = Vector2(12, 12)
texture = ExtResource("2_yajfc")
hframes = 5
vframes = 2

[node name="imageEquipment" type="Sprite2D" parent="sprite"]
position = Vector2(12, 12)
scale = Vector2(0.958333, 0.958333)
texture = ExtResource("3_5l18n")
hframes = 4
vframes = 3
frame = 8

[node name="cant" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_bjrdu")

[node name="cant_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = 5.5
offset_right = 5.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_u228m")
text = "99"
